metadata/Vendor-bids/objects/Product_Catalog__c.object
<CustomObject>
    <description>Please input an item&apos;s nick name</description>
    <fields>
        <fullName>ETA__c</fullName>
        <description>ETA for next shipment</description>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Units__c</fullName>
        <description>How many units you have in stock</description>
        <label>Inventory Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacture_Part_Number__c</fullName>
        <description>Please fill out the manufacture part number</description>
        <label>Manufacture Part Number</label>
        <length>48</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Sku__c</fullName>
        <description>If you have vendor sku for this item, feel free to fill it</description>
        <label>Vendor Sku</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Catelog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catelogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>